Version 0.06:
    - Use temp files for shared data instead of printing directly to the pipe.
      This is to avoid deadlock sitations, where the pipe is only read after
      the subprocess has finished, but the subprocess can't finish because it
      is trying to write to the pipe, but it gets full because nobody is
      reading it
Version 0.05:
    - Close pipe file handles to prevent too many open files
      This fixes:
      Bug #66487: Error "Couldn't open a pipe" when more input parameters are
                  given
      https://rt.cpan.org/Public/Bug/Display.html?id=66487
    - Fixed UNIVERSAL import warning in perl 5.12
    - Throw exception when trying to share blessed objects
      Thanks to Alexander Hartmaier <abraxxa@cpan.org>
    - Modernize tests
      Thanks to Alexander Hartmaier <abraxxa@cpan.org>
      Since, the dependency on Test::Fatal was removed
    - Converted to Module::Install
      Thanks to Alexander Hartmaier <abraxxa@cpan.org>
    - Declare that this module requires perl version 5.8 minimum, as we rely on
      Tie::ExtraHash which (apparently) was introduced in perl 5.8. Patches to
      this requirement are welcome.
    - Moved Exception POD down below general Description
Version 0.04:
    - foreach() now gives the loop correct $_ values
      This fixes:
      Bug #60384: foreach fails when @parameters doesn't use numbers
                  starting with zero
      https://rt.cpan.org/Public/Bug/Display.html?id=60384
      and
      Bug #60659: Does not work with string parameters
      https://rt.cpan.org/Public/Bug/Display.html?id=60659
    - Handle fatal errors in children e.g. if the die()
    - Detect if child didn't print any results e.g. because 'exit' was called
    - Don't allow $pl->share() to clobber any values that may already be in the
      refs - preserve the initial contents
    - Put in perldoc about two children setting same key
Version 0.03:
    - Forgot to update README
Version 0.02: