@@ -1,9 +1,21 @@
 #!/usr/bin/perl -w
 use strict;
+
+# This is really just a wrapper around
+# make all test manifest dist
+#
+# But it does a few pre-flight checks too
+
 use File::Path;
+use File::Copy;
 use Config;
 my $perlpath = $Config{perlpath};
 
+use lib 'lib';
+use Parallel::Loops;
+
+# Check that Changes and $Parallel::Loops::VERSION  agree on what the latest
+# version is
 open I, 'Changes'
     or die "Couldn't open Changes";
 my $version = <I>;
@@ -14,13 +26,17 @@ $version =~ /^Version (.*):$/
 $version = $1;
 
 # Test that this version number is the same as that in the .pm
-use lib 'lib';
-use Parallel::Loops;
 die sprintf ("Version mismatch: Changes: '%s', pm: '%s'",
              $version, $Parallel::Loops::VERSION)
     if ($version ne $Parallel::Loops::VERSION);
-if (-e "Parallel-Loops-$version.tar.gz") {
-    die "Parallel-Loops-$version.tar.gz already exists - remove it first"
+
+my $tarballFile = "Parallel-Loops-$version.tar.gz";
+my $tarballDir = "tarball";
+if (-e $tarballFile) {
+    die "$tarballFile already exists - remove it first"
+}
+if (-d $tarballDir) {
+    die "$tarballDir dir already exists - remove it first"
 }
 sub safeSystem {
     system(@_);
@@ -30,15 +46,16 @@ sub safeSystem {
                )
         if $?;
 }
+# Make sure we have an updated README
 safeSystem('pod2text lib/Parallel/Loops.pm > README');
-safeSystem('git diff --exit-code README > /dev/null');
-safeSystem('git', 'archive', 'HEAD', "--prefix=Parallel-Loops-$version/",
-           '-o', "Parallel-Loops-$version.tar");
-safeSystem('gzip', "Parallel-Loops-$version.tar");
-safeSystem('tar', '-zxvf', "Parallel-Loops-$version.tar.gz");
-chdir "Parallel-Loops-$version";
+
+# Just want to make sure we die if anything isn't up-to-date
+safeSystem('git diff --exit-code > /dev/null');
+safeSystem('git archive HEAD --prefix=tarball/ | tar x');
+chdir "tarball";
+
 safeSystem($perlpath, 'Makefile.PL');
-safeSystem('make');
-safeSystem('make', 'test');
+safeSystem('make', 'all', 'test','manifest', 'dist');
+move("$tarballFile", '..');
 chdir "..";
-rmtree("Parallel-Loops-$version");
+rmtree("tarball");
